# briskappEnhanced

./: .env.production.example  BRISK_PRACTICE_SUITE_README.md  BRISK_PRACTICE_SUITE_USER_MANUAL.md  README.md
.devcontainer/: devcontainer.json
.do/: app.yaml
backend/brisk_backend/: Dockerfile  brisk_practice.db  pyproject.toml
backend/brisk_backend/app/: database.py  main.py
backend/brisk_backend/app/middleware/: audit.py  auth.py  tenant.py
backend/brisk_backend/app/models/: __init__.py  accounts.py  ai.py  aml.py  audit.py  charity.py  client.py  cosec.py  documents.py  integrations.py  payroll.py  practice.py  products.py  reports.py  statements.py  tax.py  tenant.py  vat.py
backend/brisk_backend/app/routers/: accounts.py  admin.py  ai_advisers.py  aml.py  audit.py  books.py  charity.py  cosec.py  docusinage_enterprise.py  email.py  esign.py  integrations.py  international_vat.py  payroll.py  practice.py  search.py  tax_ct.py  tax_sa.py  templates.py  vat.py
brisk_backend/: pyproject.toml
brisk_backend/app/: auth.py  database.py  main.py  models.py
brisk_backend/app/routers/: admin.py  aml_kyc.py  auth.py  bookkeeping.py  document_hub.py  payroll.py  practice_management.py  time_fees.py
brisk_frontend/: .env  package.json  vite.config.ts
brisk_frontend/public/: _redirects
brisk_frontend/src/: App.tsx
brisk_frontend/src/components/: ErrorBoundary.tsx  ProtectedRoute.tsx
brisk_frontend/src/contexts/: AuthContext.tsx
brisk_frontend/src/pages/: AMLKYCDashboard.tsx  AdminDashboard.tsx  BookkeepingDashboard.tsx  CompanySecretarialDashboard.tsx  DocumentHubDashboard.tsx  LoginPage.tsx  PayrollDashboard.tsx  PracticeManagementDashboard.tsx  TimeManagementDashboard.tsx
brisk_frontend/src/services/: api.ts
deploy/: deployment-checklist.md  digitalocean-setup.md  production-deployment.md  simple-deployment-guide.md
docs/: ARCHITECTURE.md  DEPLOYMENT.md  SECURITY.md
frontend/brisk_frontend/: index.html  package-lock.json  package.json  tailwind.config.js
(+279 files in other folders)
